k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: useless-api
spec:
  selector:
    app: useless-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
